// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatHeader /> renders correctly 1`] = `
<header
  className="MuiPaper-root-120 MuiPaper-elevation4-126 MuiAppBar-root-111 MuiAppBar-positionFixed-112 MuiAppBar-colorPrimary-118 mui-fixed ChatHeader-appBar-106"
>
  <div
    className="MuiToolbar-root-147 MuiToolbar-regular-149 MuiToolbar-gutters-148 ChatHeader-toolbar-108"
  >
    <button
      aria-label="open drawer"
      className="MuiButtonBase-root-157 MuiIconButton-root-151 MuiIconButton-colorInherit-152"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-156"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-160"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-204"
      />
    </button>
    Avatar
    <h6
      className="MuiTypography-root-169 MuiTypography-h6-186 MuiTypography-colorInherit-198 ChatHeader-title-109"
    >
      test
      ChatMenu
    </h6>
    UserMenu
  </div>
</header>
`;

exports[`<ChatHeader /> renders correctly without active chat 1`] = `
<header
  className="MuiPaper-root-120 MuiPaper-elevation4-126 MuiAppBar-root-111 MuiAppBar-positionFixed-112 MuiAppBar-colorPrimary-118 mui-fixed ChatHeader-appBar-106"
>
  <div
    className="MuiToolbar-root-147 MuiToolbar-regular-149 MuiToolbar-gutters-148 ChatHeader-toolbar-108"
  >
    <button
      aria-label="open drawer"
      className="MuiButtonBase-root-157 MuiIconButton-root-151 MuiIconButton-colorInherit-152"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-156"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-160"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-204"
      />
    </button>
    <h6
      className="MuiTypography-root-169 MuiTypography-h6-186 MuiTypography-colorInherit-198 ChatHeader-title-109"
    >
      DogeCodes React Chat
    </h6>
    UserMenu
  </div>
</header>
`;
